--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
 REACT_APP_EMAILJS_PUBLIC_KEY=lgRY_8UtgG31MRQfw
 REACT_APP_EMAILJS_SERVICE_ID=service_3v6xq8n
 REACT_APP_EMAILJS_TEMPLATEID_ID=template_s0nc04w
-REACT_APP_API_URL=http://localhost:3000
+REACT_APP_BASE_URL=http://localhost:5001
