--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.1",
     "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
+    "formik": "^2.2.9",
     "html-react-parser": "^3.0.4",
     "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
